Started on writing integration test for User registration